--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,7 @@
     <string name="last_name">Last Name</string>
     <string name="phone_number">Phone Number</string>
     <string name="txt_edit_contact">Edit Contact</string>
+    <string name="txt_email">Email</string>
+    <string name="email_formatted">Email: %1$s</string>
+    <string name="phone_number_formatted">Phone number : %1$s</string>
 </resources>
