--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
     <string name="txt_email">Email</string>
     <string name="email_formatted">Email: %1$s</string>
     <string name="phone_number_formatted">Phone number : %1$s</string>
+    <string name="txt_search">Search</string>
+    <string name="txt_clear">Clear</string>
 </resources>
